// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@emotion/babel-plugin-core css actual-expected-usage 1`] = `
"/** @jsx jsx */
import jsx from '@emotion/jsx'
import css from '@emotion/css'

const SomeComponent = () => (
  <div
    css={css\`
      color: hotpink;
    \`}
  />
)


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";

/** @jsx jsx */
import jsx from '@emotion/jsx';
var _ref = {
  name: \\"1lrxbo5-SomeComponent\\",
  styles: \\"color:hotpink;\\"
};

const SomeComponent = () => <div css={_ref} />;"
`;

exports[`@emotion/babel-plugin-core css basic 1`] = `
"import css from '@emotion/css'

function doThing() {
  return css\`
    display: flex;
  \`
}


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";
var _ref = {
  name: \\"k008qs\\",
  styles: \\"display:flex;\\"
};

function doThing() {
  return _ref;
}"
`;

exports[`@emotion/babel-plugin-core css call-expression 1`] = `
"import css from '@emotion/css'

function doThing() {
  return css({ color: 'hotpink' })
}


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";
var _ref = {
  name: \\"1lrxbo5\\",
  styles: \\"color:hotpink;\\"
};

function doThing() {
  return _ref;
}"
`;

exports[`@emotion/babel-plugin-core css call-inside-call 1`] = `
"import css from '@emotion/css'

const thing = css\`
  display: flex;
  &:hover {
    \${css\`
      color: hotpink;
    \`};
  }
\`


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";

const thing = _css(\\"display:flex;&:hover{\\", {
  name: \\"1lrxbo5-thing\\",
  styles: \\"color:hotpink;\\"
}, \\";}label:thing;\\");"
`;

exports[`@emotion/babel-plugin-core css comment-with-interpolation 1`] = `
"import css from '@emotion/css'

css\`
  // color: \${'green'};
  /* 
  
  something: \${'something'};
  
  */
  color: hotpink;
\`

css\`
  // color: \${'green'};
  /* 
  
  something: \${'something'};
  
  */
  color: \${'hotpink'};
\`


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";
({
  name: \\"1lrxbo5\\",
  styles: \\"color:hotpink;\\"
});
({
  name: \\"1lrxbo5\\",
  styles: \\"color:hotpink;\\"
});"
`;

exports[`@emotion/babel-plugin-core css impure 1`] = `
"import css from '@emotion/css'

function doThing() {
  return css\`
    display: \${thing()};
  \`
}


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";

function doThing() {
  return _css(\\"display:\\", thing(), \\";\\");
}"
`;

exports[`@emotion/babel-plugin-core css inside-class 1`] = `
"/** @jsx jsx */
import { Component } from 'react'
import jsx from '@emotion/jsx'
import css from '@emotion/css'

class SomeComponent extends Component {
  render() {
    return (
      <div
        css={css\`
          color: hotpink;
        \`}
      />
    )
  }
}


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";

/** @jsx jsx */
import { Component } from 'react';
import jsx from '@emotion/jsx';
var _ref = {
  name: \\"1lrxbo5-SomeComponent\\",
  styles: \\"color:hotpink;\\"
};

class SomeComponent extends Component {
  render() {
    return <div css={_ref} />;
  }

}"
`;

exports[`@emotion/babel-plugin-core css label-1 1`] = `
"import css from '@emotion/css'

const thing = css\`
  color: hotpink;
\`


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";
const thing = {
  name: \\"1lrxbo5-thing\\",
  styles: \\"color:hotpink;\\"
};"
`;

exports[`@emotion/babel-plugin-core css label-object 1`] = `
"import css from '@emotion/css'

const thing = {
  thisShouldBeTheLabel: css\`
    color: hotpink;
  \`,
  // prettier-ignore
  'shouldBeAnotherLabel':css\`
    color:green;
  \`
}


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";
const thing = {
  thisShouldBeTheLabel: {
    name: \\"1lrxbo5-thisShouldBeTheLabel\\",
    styles: \\"color:hotpink;\\"
  },
  // prettier-ignore
  'shouldBeAnotherLabel': {
    name: \\"bjcoli-shouldBeAnotherLabel\\",
    styles: \\"color:green;\\"
  }
};"
`;

exports[`@emotion/babel-plugin-core css multiple-calls 1`] = `
"import css from '@emotion/css'

const thing = css\`
  color: hotpink;
\`

const otherThing = css\`
  color: green;
\`


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";
const thing = {
  name: \\"1lrxbo5-thing\\",
  styles: \\"color:hotpink;\\"
};
const otherThing = {
  name: \\"bjcoli-otherThing\\",
  styles: \\"color:green;\\"
};"
`;

exports[`@emotion/babel-plugin-core css remove-block-comments 1`] = `
"import css from '@emotion/css'

css\`
  /* color:green;
ddjfwjkng
  */
  color: hotpink;
\`


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";
({
  name: \\"1lrxbo5\\",
  styles: \\"color:hotpink;\\"
});"
`;

exports[`@emotion/babel-plugin-core css remove-line-comments 1`] = `
"import css from '@emotion/css'

css\`
  // color: green;
  color: hotpink;
\`


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";
({
  name: \\"1lrxbo5\\",
  styles: \\"color:hotpink;\\"
});"
`;
